mobile authorization page

--- a/src/locales/ru/reset.json
+++ b/src/locales/ru/reset.json
@@ -1,5 +1,5 @@
 {
-  "title": "Восстановление пароля",
+  "title": "Сброс пароля",
   "toLogin": "Вход",
   "email": {
     "label": "Электронная почта"
