--- a/src/locales/eng/login.json
+++ b/src/locales/eng/login.json
@@ -11,5 +11,6 @@
   "divider": "or",
   "withGoogle": "Sign in with Google",
   "forgot": "Forgot password?",
-  "remember": "Remember me"
+  "remember": "Remember me",
+  "pageTitle": "Taska. Login"
 }
