--- a/src/locales/ru/reset.json
+++ b/src/locales/ru/reset.json
@@ -4,5 +4,6 @@
   "email": {
     "label": "Электронная почта"
   },
-  "button": "Восстановить"
+  "button": "Восстановить",
+  "pageTitle": "Taska. Сброс пароля"
 }
