--- a/src/locales/ru/login.json
+++ b/src/locales/ru/login.json
@@ -11,5 +11,6 @@
   "divider": "или",
   "withGoogle": "Войти через Google",
   "forgot": "Забыли пароль?",
-  "remember": "Запомнить меня"
+  "remember": "Запомнить меня",
+  "pageTitle": "Taska. Вход"
 }
