--- a/src/locales/ru/settings.json
+++ b/src/locales/ru/settings.json
@@ -1,9 +1,18 @@
 {
+  "pageTitle": "Taska. Настройки",
+  "title": "Настройки",
   "navMenu": {
     "email": "Сменить адрес электронной почты",
     "password": "Сменить пароль",
     "profile": "Редактировать профиль",
     "preferences": "Параметры"
   },
-  "title": "Настройки"
+  "emailPage": {
+    "title": "Электронная почта",
+    "form": {
+      "email": "Новый адрес электронной почты",
+      "password": "Пароль",
+      "submit": "Изменить"
+    }
+  }
 }
