show notification after success operation

--- a/src/locales/eng/settings.json
+++ b/src/locales/eng/settings.json
@@ -9,6 +9,7 @@
   },
   "emailPage": {
     "title": "Email",
+    "successful": "Your email address change was successful",
     "form": {
       "email": "New email",
       "password": "Password",
