--- a/src/locales/ru/settings.json
+++ b/src/locales/ru/settings.json
@@ -9,6 +9,7 @@
   },
   "emailPage": {
     "title": "Электронная почта",
+    "successful": "Ваш адрес электронной почты был успешно изменен",
     "form": {
       "email": "Новый адрес электронной почты",
       "password": "Пароль",
