--- a/src/locales/ru/common.json
+++ b/src/locales/ru/common.json
@@ -3,6 +3,9 @@
     "time": "Время",
     "today": "Сегодня"
   },
+  "imageAlts": {
+    "avatar": "Аватар"
+  },
   "mobileSwitchLanguage": "English",
   "navMenu": {
     "logout": "Выйти",
