--- a/src/locales/eng/login.json
+++ b/src/locales/eng/login.json
@@ -1,16 +1,16 @@
 {
-  "title": "Login",
-  "toRegistration": "Registration",
+  "button": "Sign in",
+  "divider": "or",
   "email": {
     "label": "Email"
   },
+  "forgot": "Forgot password?",
+  "pageTitle": "Taska. Login",
   "password": {
     "label": "Password"
   },
-  "button": "Sign in",
-  "divider": "or",
-  "withGoogle": "Sign in with Google",
-  "forgot": "Forgot password?",
   "remember": "Remember me",
-  "pageTitle": "Taska. Login"
+  "title": "Login",
+  "toRegistration": "Registration",
+  "withGoogle": "Sign in with Google"
 }
