--- a/src/locales/eng/tasks.json
+++ b/src/locales/eng/tasks.json
@@ -22,6 +22,7 @@
   "taskList": {
     "createTask": "Create task",
     "emptyList": "Task list is empty",
+    "filter": "Filter by date",
     "pageTitle": "Taska. Task list"
   }
 }
