--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -22,6 +22,7 @@
   "taskList": {
     "createTask": "Добавить задачу",
     "emptyList": "Список задач пуст",
+    "filter": "Фильтр по дате",
     "pageTitle": "Taska. Список задач"
   }
 }
